@@ -154,8 +154,8 @@ grub_bsd_get_device (grub_uint32_t * biosdev,
   dev = grub_device_open (0);
   if (dev && dev->disk && dev->disk->partition)
     {
-
-      p = dev->disk->partition->partmap->get_name (dev->disk->partition);
+      char *p0;
+      p0 = p = dev->disk->partition->partmap->get_name (dev->disk->partition);
       if (p)
 	{
 	  if ((p[0] >= '0') && (p[0] <= '9'))
@@ -169,6 +169,7 @@ grub_bsd_get_device (grub_uint32_t * biosdev,
 	  if ((p[0] >= 'a') && (p[0] <= 'z'))
 	    *part = p[0] - 'a';
 	}
+      grub_free (p0);
     }
   if (dev)
     grub_device_close (dev);
